--- a/index.html
+++ b/index.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Result</title>
-	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
-	</body>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dr. Choi's group</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    nav {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      color: #0077cc;
+    }
+    section {
+      max-width: 800px;
+      margin: 0 auto;
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      text-align: center;
+      font-size: 14px;
+      margin-top: 50px;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Dr. Choi's group</h1>
+    <p>2D magnetism, Spintronics</p>
+  </header>
+
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Research</a>
+    <a href="#">People</a>
+    <a href="#">Publications</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <section>
+    <h2>About Our Lab</h2>
+    <p>
+      We study 2D magnetic mateirals.
+
+    </p>
+
+    <h2>Recent News</h2>
+    <ul>
+      <li>2025.06.25 - 홈페이지 개설!</li>
+      <li>2025.05 - </li>
+      <li>2025.04 - </li>
+    </ul>
+  </section>
+
+  <footer>
+    &copy; 연구실 | Contact: junwoo@kist.re.kr
+  </footer>
+
+</body>
 </html>
