--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </section>
 
   <footer>
-    &copy; 연구실 | Contact: junwoo@kist.re.kr
+    &copy; Dr. Choi's group | Contact: junwoo@kist.re.kr
   </footer>
 
 </body>
