--- a/index.html
+++ b/index.html
@@ -1,78 +1,80 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Spintronics Group</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dr. Choi's group</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Hind", sans-serif;
+      background-color: #f9f9f9;
       margin: 40px;
-      background-color: #f4f4f4;
-      color: #333;
+      color: #222;
     }
     header {
+      border-top: 5px solid #a51c30;
       text-align: center;
       margin-bottom: 40px;
+    }
+    header h1 {
+      font-size: 2.2em;
     }
     nav {
       text-align: center;
       margin-bottom: 30px;
     }
     nav a {
-      margin: 0 15px;
+      margin: 0 10px;
       text-decoration: none;
-      color: #0077cc;
+      color: #a51c30;
     }
     section {
       max-width: 800px;
       margin: 0 auto;
       background: white;
-      padding: 30px;
+      padding: 25px;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
     footer {
+      margin-top: 40px;
       text-align: center;
-      font-size: 14px;
-      margin-top: 50px;
-      color: #666;
+      font-size: 0.9em;
+      color: #555;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Dr. Choi's group</h1>
-    <p>2D magnetism, Spintronics</p>
-  </header>
+<header>
+  <h1>Spintronics Group</h1>
+  <p>2D materials · Ion gating · Quantum transport</p>
+</header>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Research</a>
-    <a href="#">People</a>
-    <a href="#">Publications</a>
-    <a href="#">Contact</a>
-  </nav>
+<nav>
+  <a href="#">Home</a>
+  <a href="#">Research</a>
+  <a href="#">Members</a>
+  <a href="#">Publications</a>
+  <a href="#">Contact</a>
+</nav>
 
-  <section>
-    <h2>About Our Lab</h2>
-    <p>
-      We study 2D magnetic mateirals.
+<section>
+  <h2>About Our Research</h2>
+  <p>
+    Our research focuses on the transport phenomena in 2D magnetic and quantum materials, using ionic gating and spintronic approaches. We aim to explore emergent phases and control electronic properties via electric fields.
+  </p>
 
-    </p>
+  <h3>Recent Highlights</h3>
+  <ul>
+    <li>2025.06.25 - New paper in <i>Nature</i> on vertical spin control in vdW systems.</li>
+    <li>2025.05.03 - Presented at Korean Magnetics Society Conference.</li>
+  </ul>
+</section>
 
-    <h2>Recent News</h2>
-    <ul>
-      <li>2025.06.25 - 홈페이지 개설!</li>
-      <li>2025.05 - </li>
-      <li>2025.04 - </li>
-    </ul>
-  </section>
-
-  <footer>
-    &copy; Dr. Choi's group | Contact: junwoo@kist.re.kr
-  </footer>
+<footer>
+  &copy; 2025 Spintronics Group – jhyun0915@gmail.com
+</footer>
 
 </body>
 </html>
