--- a/index.html
+++ b/index.html
@@ -67,13 +67,12 @@
 
   <h3>Recent Highlights</h3>
   <ul>
-    <li>2025.06.25 - New paper in <i>Nature</i> on vertical spin control in vdW systems.</li>
-    <li>2025.05.03 - Presented at Korean Magnetics Society Conference.</li>
+    <li>2025.06.25 - New paper in <i>Nature</i> on  spin control in vdW systems.</li>
   </ul>
 </section>
 
 <footer>
-  &copy; 2025 Spintronics Group – jhyun0915@gmail.com
+  &copy; 2025 Spintronics Group – junwoo@kist.re.kr
 </footer>
 
 </body>
