--- a/index.html
+++ b/index.html
@@ -1,44 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Spintronics Group</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
+      margin: 0;
       font-family: "Hind", sans-serif;
       background-color: #f9f9f9;
-      margin: 40px;
-      color: #222;
     }
-    header {
-      border-top: 5px solid #a51c30;
-      text-align: center;
-      margin-bottom: 40px;
+
+    /* 상단 고정 네비게이션 바 */
+    .navbar {
+      display: flex;
+      justify-content: flex-end; /* 오른쪽 정렬 */
+      align-items: center;
+      background-color: white;
+      padding: 20px 40px;
+      border-bottom: 3px solid #a51c30;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
-    header h1 {
-      font-size: 2.2em;
-    }
-    nav {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    nav a {
-      margin: 0 10px;
+
+    .navbar a {
+      margin-left: 20px;
       text-decoration: none;
       color: #a51c30;
+      font-weight: bold;
     }
+
+    .navbar a:hover {
+      text-decoration: underline;
+    }
+
+    header {
+      text-align: center;
+      padding: 60px 20px 20px;
+    }
+
     section {
       max-width: 800px;
-      margin: 0 auto;
+      margin: 40px auto;
       background: white;
       padding: 25px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
+
     footer {
-      margin-top: 40px;
       text-align: center;
+      margin-top: 40px;
+      padding: 20px;
       font-size: 0.9em;
       color: #555;
     }
@@ -46,34 +60,29 @@
 </head>
 <body>
 
-<header>
-  <h1>Spintronics Group</h1>
-  <p>2D materials · Ion gating · Quantum transport</p>
-</header>
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="members.html">Members</a>
+    <a href="publications.html">Publications</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-<nav>
-  <a href="#">Home</a>
-  <a href="#">Research</a>
-  <a href="#">Members</a>
-  <a href="#">Publications</a>
-  <a href="#">Contact</a>
-</nav>
+  <header>
+    <h1>Spintronics Group</h1>
+    <p>Exploring 2D magnetism and spin transport</p>
+  </header>
 
-<section>
-  <h2>About Our Research</h2>
-  <p>
-    Our research focuses on the transport phenomena in 2D magnetic and quantum materials, using ionic gating and spintronic approaches. We aim to explore emergent phases and control electronic properties via electric fields.
-  </p>
+  <section>
+    <h2>About</h2>
+    <p>
+      We study spintronics and low-dimensional quantum materials, including magnetic van der Waals systems. Our lab focuses on ionic gating, topological spin states, and electric control of magnetism.
+    </p>
+  </section>
 
-  <h3>Recent Highlights</h3>
-  <ul>
-    <li>2025.06.25 - New paper in <i>Nature</i> on  spin control in vdW systems.</li>
-  </ul>
-</section>
-
-<footer>
-  &copy; 2025 Spintronics Group – junwoo@kist.re.kr
-</footer>
+  <footer>
+    &copy; 2025 Spintronics Group – jhyun0915@gmail.com
+  </footer>
 
 </body>
 </html>
