--- a/research.html
+++ b/research.html
@@ -2,11 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Research - Spintronics Group</title>
+  <title>Members - Spintronics Group</title>
+  <style>
+    body { font-family: sans-serif; margin: 40px; background: #f9f9f9; }
+    .navbar { display: flex; justify-content: flex-end; border-bottom: 3px solid #a51c30; padding: 20px; background: white; }
+    .navbar a { margin-left: 20px; text-decoration: none; color: #a51c30; font-weight: bold; }
+    section { max-width: 800px; margin: 40px auto; background: white; padding: 30px; border-radius: 8px; box-shadow: 0 0 8px rgba(0,0,0,0.1); }
+  </style>
 </head>
 <body>
-  <h1>Our Research</h1>
-  <p>내용을 여기에 작성하세요: 예) 2D 자성체, 스핀 전달 토크, 이온 게이팅 등</p>
-  <p><a href="index.html">Back to Home</a></p>
+
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="research.html">Research</a>
+    <a href="members.html">Members</a>
+    <a href="publications.html">Publications</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <section>
+    <h1>Lab Members</h1>
+    <ul>
+      <li><strong>Our Research</li>
+      <li>2D magnet, spintronics, optical probe</li>
+    </ul>
+  </section>
+
 </body>
 </html>
