--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
   <section>
     <h2>About</h2>
     <p>
-      We study spintronics and low-dimensional quantum materials, including magnetic van der Waals systems. Our lab focuses on ionic gating, topological spin states, and electric control of magnetism.
+      We study spintronics and low-dimensional magnetic materials, including magnetic van der Waals systems. Our lab focuses on electric control of magnetism.
     </p>
   </section>
 
   <footer>
-    &copy; 2025 Spintronics Group – jhyun0915@gmail.com
+    &copy; 2025 Spintronics Group – junwoo@kist.re.kr
   </footer>
 
 </body>
