--- a/research.html
+++ b/research.html
@@ -21,9 +21,8 @@
   </nav>
 
   <section>
-    <h1>Lab Members</h1>
+    <h1>Our Research</h1>
     <ul>
-      <li><strong>Our Research</li>
       <li>2D magnet, spintronics, optical probe</li>
     </ul>
   </section>
