--- a/members.html
+++ b/members.html
@@ -23,10 +23,14 @@
   <section>
     <h1>Lab Members</h1>
     <ul>
-      <li><strong>Dr. 정현 김</strong> – Principal Investigator</li>
-      <li>홍길동 – Postdoctoral Researcher</li>
-      <li>김철수 – PhD Student</li>
-      <li>박영희 – Undergraduate Intern</li>
+      <li><strong>최준우 Dr. Jun Woo Choi</strong> – Principal Investigator</li>
+      <li> 권희영 Dr. Hee Young Kwon– Postdoctoral Researcher</li>
+      <li> 이호원 Dr. Howon Lee– Postdoctoral Researcher</li>
+      <li> 김민재 Dr. Min-Jae Kim – BRAINPOOL </li>
+      <li> 김정현 Dr. Junghyun Kim – Postdoctoral Researcher</li>
+      <li> 장명진 Dr. Myeongjin Jang – Postdoctoral Researcher</li>
+      <li> 박찬혁 PARK CHAN HYUK – PhD Student</li>
+      <li> 장준표 Junpyo Jang – Intern</li>
     </ul>
   </section>
 
