--- a/publications.html
+++ b/publications.html
@@ -24,13 +24,12 @@
     <h1>Selected Publications</h1>
     <ul>
       <li>
-        <strong>Title:</strong> Electrical Control of Magnetic Skyrmions in van der Waals Magnets<br>
-        <strong>Journal:</strong> Nature Physics (2025)<br>
-        <strong>Authors:</strong> Kim JH, et al.
+        <strong>Title:</strong> Current-driven dynamics and inhibition of the skyrmion Hall effect of ferrimagnetic skyrmions in GdFeCo films<br>
+        <strong>Journal:</strong> Nature communications 9 (1), 959<br>
       </li>
       <li>
-        <strong>Title:</strong> Ionic Gating in 2D Antiferromagnets<br>
-        <strong>Journal:</strong> Nano Letters (2024)
+        <strong>Title:</strong> Spin-orbit torque-driven skyrmion dynamics revealed by time-resolved X-ray microscopy<br>
+        <strong>Journal:</strong> Nature communications 8 (1), 15573<br>
       </li>
     </ul>
   </section>
