--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,12 @@
     <h1>Contact Us</h1>
     <p>
       Spintronics Research Lab<br>
-      서울대학교 25동 B1층<br>
-      이메일: jhyun0915@gmail.com<br>
+      한국과학기술연구원 반도체기술연구<br>
+      이메일: junwoo@kist.re.kr<br>
     </p>
     <p>
       <strong>찾아오시는 길:</strong><br>
-      지하철 2호선 서울대입구역 3번 출구 → 5513번 버스 → 공대입구 정류장
+      서울시 성북구 화랑로 14길 5, L6220
     </p>
   </section>
 
