--- a/members.html
+++ b/members.html
@@ -23,7 +23,7 @@
   <section>
     <h1>Lab Members</h1>
     <ul>
-      <li><strong>최준우 Dr. Jun Woo Choi</strong> – Principal Investigator</li>
+      <li><strong>최준우 Dr. Jun Woo Choi – Principal Investigator</strong></li>
       <li> 권희영 Dr. Hee Young Kwon– Postdoctoral Researcher</li>
       <li> 이호원 Dr. Howon Lee– Postdoctoral Researcher</li>
       <li> 김민재 Dr. Min-Jae Kim – BRAINPOOL </li>
