--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <h1>Contact Us</h1>
     <p>
       Spintronics Research Lab<br>
-      한국과학기술연구원 반도체기술연구<br>
+      한국과학기술연구원 반도체기술연구단<br>
       이메일: junwoo@kist.re.kr<br>
     </p>
     <p>
