--- a/index.html
+++ b/index.html
@@ -1,88 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Spintronics Group</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Spintronics Group | Exploring 2D Magnetism</title>
+  <link rel="shortcut icon" href="favicon.png">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
   <style>
     body {
       margin: 0;
       font-family: "Hind", sans-serif;
       background-color: #f9f9f9;
+      color: #333;
     }
-
-    /* 상단 고정 네비게이션 바 */
     .navbar {
       display: flex;
-      justify-content: flex-end; /* 오른쪽 정렬 */
+      justify-content: space-between;
       align-items: center;
-      background-color: white;
+      background-color: #fff;
       padding: 20px 40px;
       border-bottom: 3px solid #a51c30;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
-
     .navbar a {
       margin-left: 20px;
       text-decoration: none;
       color: #a51c30;
       font-weight: bold;
     }
-
     .navbar a:hover {
       text-decoration: underline;
     }
-
-    header {
+    .header {
+      background-image: url("header-image.jpg");
+      background-size: cover;
+      background-position: center;
+      color: white;
+      padding: 100px 20px 40px;
       text-align: center;
-      padding: 60px 20px 20px;
     }
-
-    section {
-      max-width: 800px;
+    .header h1 {
+      font-size: 3em;
+      margin: 0 0 10px;
+    }
+    .header p {
+      font-size: 1.3em;
+    }
+    .section {
+      max-width: 1100px;
       margin: 40px auto;
       background: white;
-      padding: 25px;
+      padding: 30px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
-
+    .section h2 {
+      border-left: 4px solid #a51c30;
+      padding-left: 12px;
+    }
+    .news ul {
+      padding-left: 20px;
+    }
     footer {
+      background-color: #fff;
       text-align: center;
       margin-top: 40px;
-      padding: 20px;
+      padding: 30px;
       font-size: 0.9em;
+      border-top: 1px solid #ccc;
       color: #555;
     }
   </style>
 </head>
 <body>
-
   <nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="research.html">Research</a>
-    <a href="members.html">Members</a>
-    <a href="publications.html">Publications</a>
-    <a href="contact.html">Contact</a>
+    <div class="logo"><strong>Spintronics Group</strong></div>
+    <div>
+      <a href="index.html">Home</a>
+      <a href="research.html">Research</a>
+      <a href="members.html">Members</a>
+      <a href="publications.html">Publications</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </nav>
 
-  <header>
+  <div class="header">
     <h1>Spintronics Group</h1>
     <p>Exploring 2D magnetism and spin transport</p>
-  </header>
+  </div>
 
-  <section>
-    <h2>About</h2>
+  <section class="section">
+    <h2>Welcome</h2>
     <p>
-      We study spintronics and low-dimensional magnetic materials, including magnetic van der Waals systems. Our lab focuses on electric control of magnetism.
+      We are an experimental condensed matter physics group focusing on low-dimensional magnetic materials and spintronic phenomena. Our interests include magnetic van der Waals materials, spin transport, and electric control of magnetism.
+    </p>
+    <p>
+      We welcome collaborations and applications from motivated undergraduate, graduate, and postdoctoral researchers. <a href="contact.html">Get in touch</a>!
     </p>
   </section>
 
-  <footer>
-    &copy; 2025 Spintronics Group – junwoo@kist.re.kr
-  </footer>
+  <section class="section news">
+    <h2>News</h2>
+    <ul>
+      <li>Our paper on ionic gating of vdW magnets is now on <a href="#">arXiv</a> (2025/07)</li>
+      <li>Congratulations to Jihye on receiving the NRF Fellowship! (2025/05)</li>
+      <li>Welcome to Seojin and Daniel who joined the group! (2025/03)</li>
+    </ul>
+  </section>
 
+  <footer>
+    &copy; 2025 Spintronics Group – junwoo@kist.re.kr<br>
+    Hosted at KIST, Seoul, Republic of Korea
+  </footer>
 </body>
 </html>
