--- a/members.html
+++ b/members.html
@@ -119,41 +119,22 @@
   </div>
 
   <section class="section">
-    <h2>Welcome</h2>
-    <p>
-      We are an experimental condensed matter physics group focusing on low-dimensional magnetic materials and spintronic phenomena. Our interests include magnetic van der Waals materials, spin transport, and electric control of magnetism.
-    </p>
-    <p>
-      We welcome collaborations and applications from motivated undergraduate, graduate, and postdoctoral researchers. <a href="contact.html">Get in touch</a>!
-    </p>
-  </section>
-
-  <section class="section news">
-    <h2>News</h2>
-    <ul>
-      <li>Our paper on ionic gating of vdW magnets is now on <a href="#">arXiv</a> (2025/07)</li>
-      <li>Congratulations to Jihye on receiving the NRF Fellowship! (2025/05)</li>
-      <li>Welcome to Seojin and Daniel who joined the group! (2025/03)</li>
-    </ul>
-  </section>
-
-  <section class="section">
     <h2>Members</h2>
     <div class="members-grid">
       <div class="member-card">
-        <img src="member1.jpg" alt="Junwoo Kim">
-        <h4>Junwoo Kim</h4>
-        <p>Principal Investigator – Spintronics, 2D magnetism</p>
+        <img src="member1.jpg" alt="Dr. Jun Woo Choi">
+        <h4>Dr. Jun Woo Choi</h4>
+        <p>Principal Investigator</p>
       </div>
       <div class="member-card">
-        <img src="member2.jpg" alt="Minji Park">
-        <h4>Minji Park</h4>
-        <p>Ph.D. student – van der Waals heterostructures</p>
+        <img src="member2.jpg" alt="Dr. Hee Young Kwon">
+        <h4>Dr. Hee Young Kwon</h4>
+        <p>Postdoctoral Researcher – Simulation</p>
       </div>
       <div class="member-card">
-        <img src="member3.jpg" alt="Daniel Lee">
-        <h4>Daniel Lee</h4>
-        <p>M.S. student – Spin transport measurement</p>
+        <img src="member3.jpg" alt="Dr. Howon Lee">
+        <h4>Dr. Howon Lee</h4>
+        <p>Postdoctoral Researcher – Optical spectroscopy</p>
       </div>
       <!-- 추가 멤버 카드 자유롭게 삽입 가능 -->
     </div>
