--- a/members.html
+++ b/members.html
@@ -120,25 +120,31 @@
 
   <section class="section">
     <h2>Members</h2>
-    <div class="members-grid">
-      <div class="member-card">
-        <img src="member1.jpg" alt="Dr. Jun Woo Choi">
-        <h4>Dr. Jun Woo Choi</h4>
-        <p>Principal Investigator</p>
-      </div>
-      <div class="member-card">
-        <img src="member2.jpg" alt="Dr. Hee Young Kwon">
-        <h4>Dr. Hee Young Kwon</h4>
-        <p>Postdoctoral Researcher – Simulation</p>
-      </div>
-      <div class="member-card">
+
+      <h3>Principal Investigator</h3>
+  <div class="members-grid">
+    <div class="member-card">
+      <img src="member1.jpg" alt="Dr. Jun Woo Choi">
+      <h4>Dr. Jun Woo Choi</h4>
+      <p>Principal Investigator</p>
+    </div>
+  </div>
+
+  <h3>Postdoctoral Researchers</h3>
+  <div class="members-grid">
+    <div class="member-card">
+      <img src="member2.jpg" alt="Dr. Hee Young Kwon">
+       <h4>Dr. Hee Young Kwon</h4>
+      <p>Postdoctoral Researcher – Simulation</p>
+    </div>
+       <div class="member-card">
         <img src="member3.jpg" alt="Dr. Howon Lee">
         <h4>Dr. Howon Lee</h4>
         <p>Postdoctoral Researcher – Optical spectroscopy</p>
       </div>
-      <!-- 추가 멤버 카드 자유롭게 삽입 가능 -->
-    </div>
-  </section>
+  </div>
+    
+     </section>
 
   <footer>
     &copy; 2025 Spintronics Group – junwoo@kist.re.kr<br>
