--- a/members.html
+++ b/members.html
@@ -143,7 +143,24 @@
         <p>Postdoctoral Researcher – Optical spectroscopy</p>
       </div>
   </div>
-    
+
+      <h3>Graduate Students</h3>
+  <div class="members-grid">
+    <div class="member-card">
+      <img src="member3.jpg" alt="Minji Park">
+      <h4>PARK CHAN HYUK</h4>
+      <p>Ph.D. Student – van der Waals heterostructures</p>
+    </div>
+   </div>
+
+     <h3>Intern</h3>
+  <div class="members-grid">
+    <div class="member-card">
+      <img src="member5.jpg" alt="Junpyo Jang">
+      <h4>Junpyo Jang</h4>
+      <p>Research intern</p>
+    </div>
+  </div>
      </section>
 
   <footer>
