--- a/members.html
+++ b/members.html
@@ -140,14 +140,26 @@
        <div class="member-card">
         <img src="member3.jpg" alt="Dr. Howon Lee">
         <h4>Dr. Howon Lee</h4>
-        <p>Postdoctoral Researcher – Optical spectroscopy</p>
+        <p>Postdoctoral Researcher – Optical spectroscopy, electrical transport</p>
+      </div>
+        </div>
+       <div class="member-card">
+        <img src="member4.jpg" alt="Dr. Min-Jae Kim">
+        <h4>Dr. Min-Jae Kim</h4>
+        <p>BRAINPOOL – Optical spectroscopy</p>
+      </div>
+        </div>
+       <div class="member-card">
+        <img src="member5.jpg" alt="Dr. Junghyun Kim">
+        <h4>Dr. Junghyun Kim</h4>
+        <p>Postdoctoral Researcher – Optical spectroscopy, electrical transport</p>
       </div>
   </div>
 
       <h3>Graduate Students</h3>
   <div class="members-grid">
     <div class="member-card">
-      <img src="member3.jpg" alt="Minji Park">
+      <img src="member6.jpg" alt="Minji Park">
       <h4>PARK CHAN HYUK</h4>
       <p>Ph.D. Student – van der Waals heterostructures</p>
     </div>
@@ -156,7 +168,7 @@
      <h3>Intern</h3>
   <div class="members-grid">
     <div class="member-card">
-      <img src="member5.jpg" alt="Junpyo Jang">
+      <img src="member7.jpg" alt="Junpyo Jang">
       <h4>Junpyo Jang</h4>
       <p>Research intern</p>
     </div>
