--- a/members.html
+++ b/members.html
@@ -123,8 +123,8 @@
 
       <h3>Principal Investigator</h3>
   <div class="members-grid">
-    <div class="member-card">
-      <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:150px; height:auto;">
+    <div class="member-card" style="display: flex; align-items: center;">
+      <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:120px; height:auto; margin-right: 16px;">
       <h4>Dr. Jun Woo Choi</h4>
       <p>Principal Investigator</p>
     </div>
