--- a/members.html
+++ b/members.html
@@ -125,8 +125,8 @@
   <div class="members-grid">
     <div class="member-card" style="display: flex; align-items: center;">
       <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:120px; height:auto; margin-right: 16px;">
-      <h4>Dr. Jun Woo Choi</h4>
-      <p>Principal Investigator</p>
+      <h4 style="font-size: 1.2em; margin-bottom: 4px;">Dr. Jun Woo Choi</h4>
+      <p style="font-size: 0.95em; color: #666; margin-top: 0;">Principal Investigator</p>
     </div>
   </div>
 
