--- a/members.html
+++ b/members.html
@@ -124,9 +124,9 @@
       <h3>Principal Investigator</h3>
   <div class="members-grid" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 50px;">
     <div class="member-card" style="display: flex; align-items: center;">
-      <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:120px; height:auto; margin-right: 30px;">
-      <h4 style="font-size: 1.2em; margin-bottom: 4px;">Dr. Jun Woo Choi</h4>
-      <p style="font-size: 0.95em; color: #666; margin-top: 0;">Principal Investigator</p>
+      <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:120px; height:auto;">
+      <h4>Dr. Jun Woo Choi</h4>
+      <p>Principal Investigator</p>
     </div>
   </div>
 
