--- a/members.html
+++ b/members.html
@@ -122,9 +122,9 @@
     <h2>Members</h2>
 
       <h3>Principal Investigator</h3>
-  <div class="members-grid" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 50px;">
-    <div class="member-card" style="display: flex; align-items: center;">
-      <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:120px; height:auto;">
+  <div class="members-grid">
+    <div class="member-card">
+      <img src="member1.jpg" alt="Dr. Jun Woo Choi" style="width:150px; height:auto;">
       <h4>Dr. Jun Woo Choi</h4>
       <p>Principal Investigator</p>
     </div>
