--- a/publications.html
+++ b/publications.html
@@ -118,19 +118,27 @@
     <p>Exploring 2D magnetism and spin transport</p>
   </div>
 
-  <section>
-    <h1>Selected Publications</h1>
-    <ul>
-      <li>
-        <strong>Title:</strong> Current-driven dynamics and inhibition of the skyrmion Hall effect of ferrimagnetic skyrmions in GdFeCo films<br>
-        <strong>Journal:</strong> Nature communications 9 (1), 959<br>
-      </li>
-      <li>
-        <strong>Title:</strong> Spin-orbit torque-driven skyrmion dynamics revealed by time-resolved X-ray microscopy<br>
-        <strong>Journal:</strong> Nature communications 8 (1), 15573<br>
-      </li>
-    </ul>
-  </section>
+ <section class="section">
+  <h2>Publications</h2>
+
+  <div class="publications-list">
+    <div class="publication-card">
+      <h4>Electric Control of Spin Transport in van der Waals Magnets</h4>
+      <p><strong>J. W. Choi</strong>, H. Lee, M. Kim, J. Kim<br>
+      <em>Nature Materials</em>, 2025</p>
+      <a href="https://doi.org/10.xxxx/xxxxxx" target="_blank">View Paper</a>
+    </div>
+
+    <div class="publication-card">
+      <h4>Gate-tunable Magnetic Phase Transitions in 2D Materials</h4>
+      <p><strong>H. Y. Kwon</strong>, S. Park, J. W. Choi<br>
+      <em>Advanced Materials</em>, 2024</p>
+      <a href="https://doi.org/10.xxxx/yyyyyy" target="_blank">View Paper</a>
+    </div>
+
+    <!-- 더 많은 publication-card를 여기에 추가하세요 -->
+  </div>
+</section>
 
 </body>
 </html>
