--- a/publications.html
+++ b/publications.html
@@ -123,17 +123,17 @@
 
   <div class="publications-list">
     <div class="publication-card">
-      <h4>Electric Control of Spin Transport in van der Waals Magnets</h4>
-      <p><strong>J. W. Choi</strong>, H. Lee, M. Kim, J. Kim<br>
-      <em>Nature Materials</em>, 2025</p>
-      <a href="https://doi.org/10.xxxx/xxxxxx" target="_blank">View Paper</a>
+      <h4>Current-driven dynamics and inhibition of the skyrmion Hall effect of ferrimagnetic skyrmions in GdFeCo films</h4>
+      <p>S Woo, KM Song, X Zhang, Y Zhou, M Ezawa, X Liu, S Finizio, J Raabe, ...<br>
+      <em>Nature communications </em>, 9 (1), 959 (2018)</p>
+      <a href="https://www.nature.com/articles/s41467-018-03378-7" target="_blank">View Paper</a>
     </div>
 
     <div class="publication-card">
-      <h4>Gate-tunable Magnetic Phase Transitions in 2D Materials</h4>
-      <p><strong>H. Y. Kwon</strong>, S. Park, J. W. Choi<br>
-      <em>Advanced Materials</em>, 2024</p>
-      <a href="https://doi.org/10.xxxx/yyyyyy" target="_blank">View Paper</a>
+      <h4>Spin-orbit torque-driven skyrmion dynamics revealed by time-resolved X-ray microscopy</h4>
+      <p>S Woo, KM Song, HS Han, MS Jung, MY Im, KS Lee, KS Song, P Fischer, ...<br>
+      <em>Nature communications </em>, 8 (1), 15573 (2017)</p>
+      <a href="https://www.nature.com/articles/ncomms15573" target="_blank">View Paper</a>
     </div>
 
     <!-- 더 많은 publication-card를 여기에 추가하세요 -->
