--- a/research.html
+++ b/research.html
@@ -118,9 +118,9 @@
     <p>Exploring 2D magnetism and spin transport</p>
   </div>
 
-  <section>
-    <h1>Our Research</h1>
-    <ul>
+ <section class="Research">
+  <h2>Our Research</h2>
+
       <li>2D magnet, spintronics, optical probe</li>
     </ul>
   </section>
