--- a/research.html
+++ b/research.html
@@ -1,107 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spintronics Group | Exploring 2D Magnetism</title>
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
+  <meta charset="UTF-8" />
+  <title>Research | Spintronics Group</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       margin: 0;
       font-family: "Hind", sans-serif;
       background-color: #f9f9f9;
-      color: #333;
     }
+
     .navbar {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #fff;
+      background-color: white;
       padding: 20px 40px;
       border-bottom: 3px solid #a51c30;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
+
     .navbar a {
       margin-left: 20px;
       text-decoration: none;
       color: #a51c30;
       font-weight: bold;
     }
+
     .navbar a:hover {
       text-decoration: underline;
     }
+
     .header {
-      background-image: url("header-image.jpg");
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 100px 20px 40px;
+      background-color: #eee;
       text-align: center;
+      padding: 60px 20px 30px;
     }
+
     .header h1 {
-      font-size: 3em;
-      margin: 0 0 10px;
+      margin-bottom: 10px;
     }
-    .header p {
-      font-size: 1.3em;
-    }
+
     .section {
-      max-width: 1100px;
+      max-width: 900px;
       margin: 40px auto;
       background: white;
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
+
     .section h2 {
+      margin-bottom: 20px;
       border-left: 4px solid #a51c30;
       padding-left: 12px;
     }
-    .news ul {
-      padding-left: 20px;
+
+    .research-topic {
+      margin-bottom: 30px;
     }
-    .members-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
+
+    .research-topic h3 {
+      color: #a51c30;
+      margin-bottom: 10px;
     }
-    .member-card {
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 20px;
-      width: 220px;
+
+    .research-topic p {
+      font-size: 0.95em;
+      color: #444;
+      margin: 0;
     }
-    .member-card img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
+
+    .research-topic img {
+      max-width: 100%;
+      height: auto;
+      margin: 10px 0 20px;
       border-radius: 6px;
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.08);
     }
-    .member-card h4 {
-      margin: 12px 0 6px;
-    }
-    .member-card p {
-      font-size: 0.9em;
-      color: #666;
-    }
+
     footer {
-      background-color: #fff;
       text-align: center;
       margin-top: 40px;
-      padding: 30px;
+      padding: 20px;
       font-size: 0.9em;
-      border-top: 1px solid #ccc;
       color: #555;
     }
   </style>
 </head>
 <body>
+
   <nav class="navbar">
     <div class="logo"><strong>Spintronics Group</strong></div>
     <div>
@@ -114,16 +105,36 @@
   </nav>
 
   <div class="header">
-    <h1>Spintronics Group</h1>
-    <p>Exploring 2D magnetism and spin transport</p>
+    <h1>Research</h1>
+    <p>Our focus areas in spintronics and 2D magnetic materials</p>
   </div>
 
- <section class="Research">
-  <h2>Our Research</h2>
+  <section class="section">
+    <h2>Research Topics</h2>
 
-      <li>2D magnet, spintronics, optical probe</li>
-    </ul>
+    <div class="research-topic">
+      <h3>1. Electric Control of Magnetism</h3>
+      <p>We explore how electric fields and ionic gating techniques can control magnetic states in 2D van der Waals materials. This opens up opportunities for ultra-low-power spintronic devices.</p>
+      <img src="research1.jpg" alt="Electric control of magnetism">
+    </div>
+
+    <div class="research-topic">
+      <h3>2. Spin Transport and Magnetoresistance</h3>
+      <p>Our group investigates spin current transport in magnetic heterostructures, and studies tunneling magnetoresistance, non-local spin signals, and spin Hall effect in low-dimensional systems.</p>
+      <img src="research2.jpg" alt="Spin transport image">
+    </div>
+
+    <div class="research-topic">
+      <h3>3. van der Waals Magnetic Heterostructures</h3>
+      <p>We fabricate and study 2D magnetic stacks with tailored interfaces. By combining different materials, we design new functionalities such as chiral spin textures, topological phases, and proximity effects.</p>
+      <img src="research3.jpg" alt="vdW heterostructure image">
+    </div>
+
   </section>
+
+  <footer>
+    &copy; 2025 Spintronics Group – junwoo@kist.re.kr
+  </footer>
 
 </body>
 </html>
