--- a/contact.html
+++ b/contact.html
@@ -1,107 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spintronics Group | Exploring 2D Magnetism</title>
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
+  <meta charset="UTF-8" />
+  <title>Contact | Spintronics Group</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       margin: 0;
       font-family: "Hind", sans-serif;
       background-color: #f9f9f9;
-      color: #333;
     }
+
     .navbar {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #fff;
+      background-color: white;
       padding: 20px 40px;
       border-bottom: 3px solid #a51c30;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
+
     .navbar a {
       margin-left: 20px;
       text-decoration: none;
       color: #a51c30;
       font-weight: bold;
     }
+
     .navbar a:hover {
       text-decoration: underline;
     }
+
     .header {
-      background-image: url("header-image.jpg");
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 100px 20px 40px;
+      background-color: #eee;
       text-align: center;
+      padding: 60px 20px 30px;
     }
+
     .header h1 {
-      font-size: 3em;
-      margin: 0 0 10px;
+      margin-bottom: 10px;
     }
-    .header p {
-      font-size: 1.3em;
-    }
+
     .section {
-      max-width: 1100px;
+      max-width: 800px;
       margin: 40px auto;
       background: white;
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
+
     .section h2 {
+      margin-bottom: 20px;
       border-left: 4px solid #a51c30;
       padding-left: 12px;
     }
-    .news ul {
-      padding-left: 20px;
+
+    .contact-info p {
+      font-size: 1em;
+      margin: 10px 0;
     }
-    .members-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
+
+    .contact-info strong {
+      display: inline-block;
+      width: 100px;
+      color: #a51c30;
     }
-    .member-card {
-      background: #fff;
+
+    .map {
+      margin-top: 30px;
       border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 20px;
-      width: 220px;
+      overflow: hidden;
+      box-shadow: 0 0 6px rgba(0,0,0,0.1);
     }
-    .member-card img {
+
+    .map iframe {
       width: 100%;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 6px;
+      height: 300px;
+      border: none;
     }
-    .member-card h4 {
-      margin: 12px 0 6px;
-    }
-    .member-card p {
-      font-size: 0.9em;
-      color: #666;
-    }
+
     footer {
-      background-color: #fff;
       text-align: center;
       margin-top: 40px;
-      padding: 30px;
+      padding: 20px;
       font-size: 0.9em;
-      border-top: 1px solid #ccc;
       color: #555;
     }
   </style>
 </head>
 <body>
+
   <nav class="navbar">
     <div class="logo"><strong>Spintronics Group</strong></div>
     <div>
@@ -114,22 +106,33 @@
   </nav>
 
   <div class="header">
-    <h1>Spintronics Group</h1>
-    <p>Exploring 2D magnetism and spin transport</p>
+    <h1>Contact Us</h1>
+    <p>We welcome collaboration and inquiries</p>
   </div>
 
-  <section>
-    <h1>Contact Us</h1>
-    <p>
-      Spintronics Research Lab<br>
-      한국과학기술연구원 반도체기술연구단<br>
-      이메일: junwoo@kist.re.kr<br>
-    </p>
-    <p>
-      <strong>찾아오시는 길:</strong><br>
-      서울시 성북구 화랑로 14길 5, L6220
-    </p>
+  <section class="section">
+    <h2>Contact Information</h2>
+    <div class="contact-info">
+      <p><strong>PI:</strong> Dr. Jun Woo Choi</p>
+      <p><strong>Email:</strong> junwoo@kist.re.kr</p>
+      <p><strong>Phone:</strong> +82-2-958-xxxx</p>
+      <p><strong>Lab:</strong> L6220, 반도체기술연구</p>
+      <p><strong>Address:</strong> KIST, Hwarang-ro 14-gil 5, Seongbuk-gu, Seoul, Korea</p>
+    </div>
+
+    <div class="map">
+      <!-- Google Maps Embed: 실제 주소로 바꾸면 정확하게 위치 표시됨 -->
+      <iframe 
+        src="https://maps.app.goo.gl/7jfcwC1c1peeDTV26"
+        allowfullscreen=""
+        loading="lazy"
+      ></iframe>
+    </div>
   </section>
+
+  <footer>
+    &copy; 2025 Spintronics Group – junwoo@kist.re.kr
+  </footer>
 
 </body>
 </html>
