--- a/publications.html
+++ b/publications.html
@@ -114,8 +114,8 @@
   </nav>
 
   <div class="header">
-    <h1>Spintronics Group</h1>
-    <p>Exploring 2D magnetism and spin transport</p>
+    <h1>Publications</h1>
+    <p> </p>
   </div>
 
  <section class="section">
