--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Spintronics Group | Exploring 2D Magnetism</title>
+  <title>Quantum-material-based Spintronics</title>
   <link rel="shortcut icon" href="favicon.png">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
   <style>
@@ -87,14 +87,14 @@
   </nav>
 
   <div class="header">
-    <h1>Spintronics Group</h1>
+    <h1>Quantum-material-based Spintronics</h1>
     <p>Exploring 2D magnetism and spin transport</p>
   </div>
 
   <section class="section">
     <h2>Welcome</h2>
     <p>
-      We are an experimental condensed matter physics group focusing on low-dimensional magnetic materials and spintronic phenomena. Our interests include magnetic van der Waals materials, spin transport, and electric control of magnetism.
+      We are an experimental condensed matter physics group focusing on low-dimensional magnetic materials and spintronic phenomena. Our interests include van der Waals magnetic materials, quantum-material-based spintronics, electric field control of magnetism, topological spin textures, etc.
     </p>
     <p>
       We welcome collaborations and applications from motivated undergraduate, graduate, and postdoctoral researchers. <a href="contact.html">Get in touch</a>!
@@ -104,9 +104,18 @@
   <section class="section news">
     <h2>News</h2>
     <ul>
-      <li>  </li>
-      <li>  </li>
-      <li>  </li>
+      <li>2025.07	Dr. Myeongjin Jang has joined our group as a postdoctoral researcher.</li>
+      <li>2025.04	Junpyo Jang has joined our group as an intern researcher.</li>
+      <li>2025.04	Dr. Hee Young Kwon’s paper has been published in Physical Review B (https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.134437). </li>
+      <li>2025.03	Chan Hyuk Park has started graduate school (Ph.D. course) at Korea University.</li>
+      <li>2024.12	Intern Researcher Taegyu Lee has left our group to join KLA Corporation as an engineer.</li>
+      <li>2024.09	Dr. Junghyun Kim has joined our group as a postdoctoral researcher.</li>
+      <li>2024.09	Dr. Min-Jae Kim has joined our group as a postdoctoral(Brain-Pool) researcher.</li>
+      <li>2024.05	Dr. Inhak Lee & Jungyun Kee’s paper has been published in Scientific Reports (https://www.nature.com/articles/s41598-024-60076-9).</li>
+      <li>2024.03	Han Gyu Yoon has joined our group as a graduate student.</li>
+      <li>2024.03	Taegyu Lee has joined our group as an intern researcher.</li>
+      <li>2024.03	Dr. Inhak Lee’s paper has been published in Applied Surface Science (https://www.sciencedirect.com/science/article/pii/S016943322302737X).</li>
+      <li>2024.02	Dr. Jaeun Eom has graduated (Ph.D. in Physics, Seoul National University) and left the group to join SK Hynix as a engineer.</li>
     </ul>
   </section>
 
@@ -116,3 +125,4 @@
   </footer>
 </body>
 </html>
+
