--- a/index.html
+++ b/index.html
@@ -106,15 +106,15 @@
     <ul>
       <li>2025.07	Dr. Myeongjin Jang has joined our group as a postdoctoral researcher.</li>
       <li>2025.04	Junpyo Jang has joined our group as an intern researcher.</li>
-      <li>2025.04	Dr. Hee Young Kwon’s paper has been published in Physical Review B (https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.134437). </li>
+      <li>2025.04	Dr. Hee Young Kwon’s paper has been published in Physical Review B <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.134437" target="_blank">View Paper</a>.</li>
       <li>2025.03	Chan Hyuk Park has started graduate school (Ph.D. course) at Korea University.</li>
       <li>2024.12	Intern Researcher Taegyu Lee has left our group to join KLA Corporation as an engineer.</li>
       <li>2024.09	Dr. Junghyun Kim has joined our group as a postdoctoral researcher.</li>
       <li>2024.09	Dr. Min-Jae Kim has joined our group as a postdoctoral(Brain-Pool) researcher.</li>
-      <li>2024.05	Dr. Inhak Lee & Jungyun Kee’s paper has been published in Scientific Reports (https://www.nature.com/articles/s41598-024-60076-9).</li>
+      <li>2024.05	Dr. Inhak Lee & Jungyun Kee’s paper has been published in Scientific Reports <a href="https://www.nature.com/articles/s41598-024-60076-9" target="_blank">View Paper</a>.</li>
       <li>2024.03	Han Gyu Yoon has joined our group as a graduate student.</li>
       <li>2024.03	Taegyu Lee has joined our group as an intern researcher.</li>
-      <li>2024.03	Dr. Inhak Lee’s paper has been published in Applied Surface Science (https://www.sciencedirect.com/science/article/pii/S016943322302737X).</li>
+      <li>2024.03	Dr. Inhak Lee’s paper has been published in Applied Surface Science <a href="https://www.sciencedirect.com/science/article/pii/S016943322302737X" target="_blank">View Paper</a>.</li>
       <li>2024.02	Dr. Jaeun Eom has graduated (Ph.D. in Physics, Seoul National University) and left the group to join SK Hynix as a engineer.</li>
     </ul>
   </section>
@@ -125,4 +125,5 @@
   </footer>
 </body>
 </html>
+
 
