--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo"><strong>Spintronics Group</strong></div>
+    <div class="logo"><strong>Quantum-material Spintronics Group @ KIST</strong></div>
     <div>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
@@ -125,5 +125,6 @@
   </footer>
 </body>
 </html>
+
 
 
