--- a/contact.html
+++ b/contact.html
@@ -113,17 +113,17 @@
   <section class="section">
     <h2>Contact Information</h2>
     <div class="contact-info">
-      <p><strong>PI:</strong> Dr. Jun Woo Choi</p>
+      <p><strong>PI:</strong> Dr. Jun Woo Choi(Center for Semiconductor Technology)</p>
       <p><strong>Email:</strong> junwoo@kist.re.kr</p>
-      <p><strong>Phone:</strong> +82-2-958-xxxx</p>
-      <p><strong>Lab:</strong> L6220, 반도체기술연구</p>
-      <p><strong>Address:</strong> KIST, Hwarang-ro 14-gil 5, Seongbuk-gu, Seoul, Korea</p>
+      <p><strong>Phone:</strong> +82-2-958-6445</p>
+      <p><strong>Lab Address:</strong> L6220, KIST, Hwarang-ro 14-gil 5, Seongbuk-gu, Seoul, Korea</p>
+      <p>* Link to Research Center website:<a href="https://www.kist.re.kr/ko/research/advanced-materials-greeting001.do">https://www.kist.re.kr/ko/research/advanced-materials-greeting001.do</a></p>
     </div>
 
     <div class="map">
       <!-- Google Maps Embed: 실제 주소로 바꾸면 정확하게 위치 표시됨 -->
       <iframe 
-        src="https://maps.app.goo.gl/7jfcwC1c1peeDTV26"
+        src="https://maps.app.goo.gl/oYR9yA9KfZ1gULX47"
         allowfullscreen=""
         loading="lazy"
       ></iframe>
